<resources>
    <string name="button_message">send</string>
    <string name="app_name" translatable="false">Except Pains</string>
    <string name="always_on_channel">Always-on Actions</string>
    <string name="always_on_channel_description">This is a channel for quick actions.</string>
    <string name="always_on_channel_id" translatable="false">com.example.epledger.ALWAYS_ON_CHANNEL</string>
    <string name="alert_channel">Alerts</string>
    <string name="alert_channel_description">This is a channel for usual alerts.</string>
    <string name="alert_channel_id" translatable="false">com.example.epledger.ALERT_CHANNEL</string>
    <string name="always_on_group_id" translatable="false">com.example.epledger.AlWAYS_ON_GROUP</string>
    <string name="always_on_group">Always-on Notification Group</string>
    <string name="alert_group">Alert Notification Group</string>
    <string name="alert_group_id" translatable="false">com.example.epledger.ALERT_GROUP</string>
    <string name="act_popup_newrec_title">New Item</string>
    <string name="act_home_title">Home</string>
    <string name="edit_message" translatable="false">快来编辑我</string>
    <string name="screenshot_fgservice_title">Screenshot Service</string>
    <string name="screenshot_fgservice_content">Foreground screenshot service running right now.</string>
    <string name="ok">Okay</string>
    <string name="screenshot_failure">Screenshot Failed</string>
    <string name="screenshot_failure_description">No screenshot permission. To use this module you need to retry and confirm the permission in the next window.</string>
    <string name="open">Open</string>
    <string name="newrec">New</string>
    <string name="tile_service_label">Quick Record</string>
    <string name="nav_home">Home</string>
    <string name="nav_charts">Charts</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_settings">Settings</string>
    <string name="show_chart_page_title">统计图</string>
    <string name="page_title">统计图表</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="content_description_search">搜索图标描述</string>
    <string name="content_description_more">更多图标描述</string>
    <string name="sift">筛选</string>
    <string name="content_description_sift">筛选图标描述</string>
    <string name="icons">&#xe68a;</string>
    <string name="reset">重置</string>
    <string name="content_description_reset">重置图标描述</string>
    <string name="account">账户</string>
    <string name="wechat_account_chip">微信</string>
    <string name="alipay_account_chip">支付宝</string>
    <string name="campus_card_account_chip">校园卡</string>
    <string name="expense_type">消费类型</string>
    <string name="eat_type_chip">餐饮</string>
    <string name="shopping_type_chip">购物</string>
    <string name="transport_type_chip">交通</string>
    <string name="entertainment_type_chip">娱乐</string>
    <string name="book_type_chip">书籍</string>
    <string name="clothes_type_chip">服装</string>
    <string name="digital_type_chip">数码</string>
    <string name="study_type_chip">学习</string>
    <string name="daily_necessity_type_chip">日用品</string>
    <string name="phone_bill_type_chip">话费</string>
    <string name="makeup_type_chip">化妆</string>
    <string name="medical_type_chip">医疗</string>
    <string name="travel_type_chip">旅行</string>
    <string name="water_electricity_type_chip">水电</string>
    <string name="sport_type_chip">运动</string>
    <string name="gift_type_chip">礼物</string>
    <string name="red_envelope_type_chip">红包</string>
    <string name="donate_type_chip">捐赠</string>
    <string name="set_date_range_button">设置</string>
    <string name="prefer_cate_qa">Quick Action</string>
    <string name="prefer_item_brief">Brief mode</string>
    <string name="prefer_item_shot">Take screenshot on start</string>
    <string name="prefer_item_shot_sum">Right after the card is popped up</string>
    <string name="prefer_item_qa_noti">Show in notification center</string>
    <string name="prefer_item_qa_noti_sum">Recommended</string>
    <string name="prefer_cate_data">Data</string>
    <string name="prefer_item_export_db">Export Database</string>
    <string name="prefer_item_export_db_sum">When you want to restore data in the future</string>
    <string name="prefer_item_export_csv">Export as CSV</string>
    <string name="prefer_item_export_csv_sum">When you want to view data in your computer</string>
    <string name="prefer_item_import_db">Import Database</string>
    <string name="prefer_item_import_db_sum">When you have a backup from this app</string>
    <string name="prefer_item_import_alipay">Import from CSV(Alipay)</string>
    <string name="prefer_item_import_alipay_sum">When you have data exported from Alipay</string>
    <string name="prefer_item_import_wechat">Import from CSV(Wechat)</string>
    <string name="prefer_item_import_wechat_sum">When you have data exported from Wechat</string>
    <string name="specification_title">Specifications</string>
    <string name="specification_msg"><b>1 Quick Actions</b>
        <font size="4">\n\n</font><i>Quick Actions</i> is a small window which is supposed to be fast so it can offer you a convenient way of recording income and expenditure.
        <font size="6">\n\n</font><b>︎︎1.1 Brief Mode</b>
        <font size="4">\n\n</font>Date and time will be hidden in window and set to current time. If you scarcely adjust them, turning on this feature will give you a cleaner view.
        <font size="6">\n\n</font><b>1.2 Take Screenshot Immediately</b>
        <font size="4">\n\n</font>Screenshots are designed for situations where you barely have time to create a record so you want to take a screenshot and enter the details according to it later.
            We suggest you delete those screenshots to save storage space when you complete a record.
            If you frequently take screenshots, you can turn this feature on.
        <font size="6">\n\n</font><b>1.3 Show in Notification Center</b>
        <font size="4">\n\n</font>Quick-Action can be found both in quick settings as a tile button and in notification center(if you turn on this feature).
            Due to restrictions made by Google, in those latest SDKs, a tile service can not launch an activity in 5s once you press <b>HOME</b> button.
            This may lead to poor experience when you are really short of time.
        \nBesides, those SDKs do not allow permanent permission for screenshots. Turning on this feature allows saving a permission as long as the application is alive.
        <font size="12">\n\n</font><b>2 Data</b>
        <font size="4">\n\n</font>Backing up or restoring your data.
        <font size="6">\n\n</font><b>2.1 Export Database</b>
        <font size="4">\n\n</font>Exporting database allows future restoring.
        <font size="6">\n\n</font><b>2.2 Export as CSV</b>
        <font size="4">\n\n</font>CSV is just like a spreadsheet but in a simpler format. You can view it in your computer.
        <font size="6">\n\n</font><b>2.3 Import Database</b>
        <font size="4">\n\n</font>For Data restoring.
        <font size="6">\n\n</font><b>2.4 Import from CSV(Alipay)</b>
        <font size="4">\n\n</font>You should follow the instructions on Alipay official website to export your income and expenditure details as CSV.
        Put it in storage of your phone and select it in file selecting view that popped up.
        Then data will be imported to our database if the file is in correct format.
        <font size="6">\n\n</font><b>2.5 Import from CSV(Wechat)</b>
        <font size="4">\n\n</font>Similar to 2.4.
        <font size="12">\n\n</font><b>3 Inbox</b>
        <font size="6">\n\n</font><b>3.1 Star</b>
        <font size="4">\n\n</font>Why should you star records sometimes?
        For example, if you lend a few bucks to your friend and he‘ll repay them in a couple of days,
        you can mark the record as starred.
        When you want to edit it days later, you can find it quickly.
        <font size="6">\n\n</font><b>3.2 Incomplete records</b>
        <font size="4">\n\n</font>Incomplete records are also shown here, the number of which is represented as a badge on the page icon.
        Usually we encourage keeping a few of them because you may just don’t have time, but they are harmful to statistics.
        When you see a badge with number on Inbox icon, you should complete the records if you have time. <b>Screenshots within incomplete
            records are deleted implicitly when you finish them.</b>
        <font size="12">\n\n</font><b>4 List</b>
        <font size="4">\n\n</font>You view a item by a short click, while delete one by a long click.
    </string>
    <string name="menu_title_inbox_notification">Notification</string>
    <string name="inbox_label_star">Starred</string>
    <string name="inbox_label_incomplete">Incomplete</string>
    <string name="inbox_label_screenshot">Screenshot Included</string>
    <string name="inbox_dialog_switch_title">Daily Timer</string>
    <string name="detail_page_title_create">Create Item</string>
    <string name="detail_page_title_modify">Modify Item</string>
    <string name="menu_item_title_submit">Submit</string>
    <string name="menu_item_title_discard">Discard</string>
    <string name="detail_btn_select">Select</string>
    <string name="detail_date">Date</string>
    <string name="detail_time">Time</string>
    <string name="detail_src">Source</string>
    <string name="detail_type">Category</string>
    <string name="detail_money">Money</string>
    <string name="detail_memo">Memo</string>
    <string name="detail_screenshot">Snap</string>
    <string name="detail_screenshot_remove">Remove</string>
    <string name="detail_screenshot_for_this_record">Screenshot for this Record</string>
    <string name="empty_prompt">(Empty)</string>
    <string name="menu_item_title_edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="sure">Sure</string>
    <string name="rec_del_confirm">Are you sure about deleting this record?</string>
    <string name="notifications">Notifications</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="starred">Starred</string>
    <string name="incomplete">Incomplete</string>
    <string name="screenshots">Screenshots</string>
    <string name="events">Events</string>
    <string name="unit_day">" day(s)"</string>
    <string name="unit_month">" month(s)"</string>
    <string name="unit_year">" year(s)"</string>
    <string name="event_info_fmt">From %s. Cycle: %d%s.</string>
    <string name="unconditionally_remind">Remind me unconditionally</string>
    <string name="unconditionally_remind_sum">even if no events have expired</string>
    <string name="alert">Alert</string>
    <string name="recurring_events">Recurring Events</string>
    <string name="stop_ck_prompt">Stopping foreground service</string>
    <string name="content_description_add_event_to_list">Add new event to the list</string>
    <string name="no_events_prompt">You have no events here.</string>
    <string name="alert_time">Alert time</string>
    <string name="noti_time_sum_fmt">Current: %s (24-hour clock)</string>
    <string name="have_not_set_time_prompt">You haven\'t set the time yet</string>
    <string name="event_del_confirm">Are you sure about deleting this event?</string>
    <string name="create_event">Create Event</string>
    <string name="modify_event">Modify Event</string>
    <string name="starts_on">Starts on</string>
    <string name="cycle">Cycle</string>
    <string name="name">Name</string>
    <string name="set">Set</string>
    <string name="template">Template</string>
    <string name="icon">Icon</string>
    <string name="del_event_confirmation">Are you sure about deleting this event?</string>
    <string name="inbox_page_no_need_to_handle">All records are handled</string>
</resources>