<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sift"
        android:icon="@drawable/ic_sift"
        android:title="@string/sift"
        android:contentDescription="@string/content_description_sift"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reset"
        android:icon="@drawable/ic_reset"
        android:title="@string/reset"
        android:contentDescription="@string/content_description_reset"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />


</menu>