<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/nav_charts"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:title="@string/nav_charts"/>
    <item
        android:id="@+id/nav_notification"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/nav_notification"/>
    <item
        android:id="@+id/nav_settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_settings"/>
</menu>