<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/inbox_page_no_record_image"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_colorful_empty_box"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
        <TextView
            android:padding="16dp"
            android:textSize="18sp"
            android:text="@string/inbox_page_no_need_to_handle"
            android:singleLine="true"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/inbox_incomplete_section_header"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_fas_ellipsis_h"
                    android:layout_width="@dimen/inbox_section_title_icon_width"
                    android:layout_height="@dimen/inbox_section_title_icon_width"/>
                <TextView
                    android:layout_marginStart="8dp"
                    android:id="@+id/inbox_incomplete_section_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incomplete"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inbox_incomplete_recycler_view"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                tools:layout_editor_absoluteX="133dp"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/inbox_star_section_header"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_fas_star"
                    android:layout_width="@dimen/inbox_section_title_icon_width"
                    android:layout_height="@dimen/inbox_section_title_icon_width"/>
                <TextView
                    android:id="@+id/inbox_star_section_label"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starred"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inbox_star_recycler_view"
                android:layout_marginBottom="8dp"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                tools:layout_editor_absoluteX="133dp"
                android:layout_height="wrap_content"/>

<!--            <TextView-->
<!--                android:id="@+id/no_sections_msg"-->
<!--                android:text="@string/no_unhandled_records"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


